--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     width: 960px;
     margin: auto;
     background-color: rgb(227, 247, 207);
-    height:999px;
+    height:1000pxpx;
 }
 .judul img{
     width: 960px;
