--- a/style.css
+++ b/style.css
@@ -37,11 +37,11 @@
     line-height: 40px;
     padding-left: 20px;
     padding-right: 20px;
-    margin-left: 20px;
+    margin-left: 200px;
+    background-color: chartreuse;
 }
-.navigasi ul li:hover {
-    background-color: saddlebrown;
-}
+
+
 #konten h1{
     text-align: center;
     font-size: 67px;
